# kingwangjjang-be

./: .gitignore  Dockerfile  README.md  docker-compose.yml  prod.sh  pyproject.toml  pytest.ini  requirements.txt  settings.py  test-docker-compose.yml
.github/workflows/: django.yml  fastapi.yml  qodana_code_quality.yml  restyled.yml  test.yml
app/: celery_app.py  celeryconfig.py  config.py  constants.py  db_init.py  dev.bash  main.py  mongo.py  prod.sh
app/celery/: celery_app.py  schema.py  tasks.py  types.py
app/celery/LLM/: schema.py  tasks.py
app/celery/Logging/: tasks.py
app/celery/comment/: schema.py  tasks.py
app/celery/count/: schema.py  tasks.py
app/db/: board.py  context.py  mongo_controller.py
app/middlewares/: cors_middleware.py  static_middleware.py
app/models/: board.py  count.py  user_db.py
app/routes/: index.py
app/routes/_path/: ApiPaths.py
app/routes/api/: api.py
app/routes/auth/: auth_controller.py  google_service.py  kakao_service.py
app/routes/board/: board_controller.py
app/routes/comment/: comment_comtroller.py
app/routes/count/: count_controller.py
app/routes/mail/: webhook_controller.py
app/routes/oauth/: google.py  kakao.py
app/routes/page/: __init__.py  page_controller.py
app/routes/path/: ApiPaths.py
app/routes/ping/: ping_controller.py
app/routes/user/: user_controller.py  user_service.py
app/routes/webCrwaling/: pagination.py  schema.py  tasks.py  views.py
app/routes/webCrwaling/communityWebsite/: communityWebsite.py  dcinside.py  (+4 more)
app/routes/web_crwaling/: schema.py  views.py
app/services/board_comment/: add.py  get.py
app/services/count/: likes.py  views.py
app/services/user/: user.py
app/services/web_crawling/: index.py  pagination.py
app/services/web_crwaling/: pagination.py  schema.py  task.py  views.py
app/services/webhook/: mail.py
app/utils/: FTPClient.py  __init__.py  background_schedule_task.py  dependencies.py  formating.py  lifespan.py  llm.py  loghandler.py  oauth.py  pymongo_object_id.py  sha256_hashing.py  tag_split.py  uptimerobot.py
app/webCrwaling/: tasks.py  views.py
app/webCrwaling/communityWebsite/: communityWebsite.py  dcinside.py  ppomppu.py  ppompu.py  ygosu.py
app/webCrwaling/migrations/: 0001_initial.py
app/web_crwaling/: views.py
instaPost/: instaPost.py  views.py
kingwangjjang/: .gitignore  Dockerfile  constants.py  docker-compose.yml  dockerfile_synology  manage.py  mongo.py  requirements.txt  utils.py
kingwangjjang/chatGPT/: api_response.py  apps.py  chatGPT.py  gpt_response.py  urls.py  views.py
kingwangjjang/instaPost/: apps.py  instaPost.py  urls.py  views.py
kingwangjjang/kingwangjjang/: __init__.py  asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
kingwangjjang/kingwangjjang/config/: __init__.py  celery.py  settings.py
kingwangjjang/templates/: index.html  login.html  upload_photo.html
kingwangjjang/webCrwaling/: admin.py  apps.py  models.py  pagination.py  schema.py  tasks.py  urls.py  views.py
kingwangjjang/webCrwaling/communityWebsite/: communityWebsite.py  dcinside.py  models.py  ppomppu.py  ppompu.py  ygosu.py
kingwangjjang/webCrwaling/migrations/: 0001_initial.py
llm/: main.py
tests/: test_main.py
(+18 files in other folders)
